--- a/1.html
+++ b/1.html
@@ -9,6 +9,11 @@
  	<link rel="stylesheet" href="1.css">
  	<link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
  	<link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200;400&display=swap" rel="stylesheet">
+     <script type="text/javascript" src="js/bootstrap.min.js"></script>
+    <script src="js/jquery.js"></script>
+    <script src="1.js"></script>
+
 </head>
 <body >
     <div class="container-fluid big-img text-center">
@@ -17,11 +22,12 @@
         <a href="#" class="btn btn-default">Find Out More</a>
     </div>
     <!-- end big-img-->
-    <div class="container-fluid text-center">
+    <div class="container-fluid text-center text-under-bigimg">
         <h2>Stylish Portfolio is the perfect theme for your next project!</h2>
         <p>This theme features some wonderful photography courtesy of <a href="xnxx.com">Death to the Stock Photo</a>.</p>
     </div>
     <!-- end under big-img -->
+    <div class="bg-blue">
     <div class="container text-center">
         <div class="row">
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
@@ -30,49 +36,50 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-xs-12 col-sm-6 col-md-3">
-                <i class="fa fa-cloud fa-4x"></i>
+            <div class="col-xs-12 col-sm-6 col-md-3 item-service">
+                <i class="fa fa-cloud fa-4x bg-icon"></i>
                 <h4>Service Name</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                <a href="#" class="btn btn-default">Learn More</a>
+                <a href="#" class="btn btn-default learn_more">Learn More</a>
             </div>
-             <div class="col-xs-12 col-sm-6 col-md-3">
-                <i class="fa fa-compass fa-4x"></i>
+             <div class="col-xs-12 col-sm-6 col-md-3 item-service">
+               <i class="fa fa-compass fa-4x bg-icon2"></i>
                 <h4>Service Name</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                <a href="#" class="btn btn-default">Learn More</a>
+                <a href="#" class="btn btn-default learn_more">Learn More</a>
             </div>
-             <div class="col-xs-12 col-sm-6 col-md-3">
-                <i class="fa fa-flask fa-4x"></i>
+             <div class="col-xs-12 col-sm-6 col-md-3 item-service">
+                <i class="fa fa-flask fa-4x bg-icon "></i>
                 <h4>Service Name</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                <a href="#" class="btn btn-default">Learn More</a>
+                <a href="#" class="btn btn-default learn_more">Learn More</a>
             </div>
-             <div class="col-xs-12 col-sm-6 col-md-3">
-                <i class="fa fa-shield fa-4x"></i>
+             <div class="col-xs-12 col-sm-6 col-md-3 item-service">
+               <i class="fa fa-shield fa-4x bg-icon2"></i>
                 <h4>Service Name</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                <a href="#" class="btn btn-default">Learn More</a>
+                <a href="#" class="btn btn-default learn_more">Learn More</a>
             </div>
         </div>
+    </div>
     </div>
     <!-- end services -->
     <div class="container-fluid bg-img2 text-center">
         <h1>Vertically Centered Text</h1>
     </div>
     <!-- end second background-img -->
-    <div class="container text-center">
+    <div class="container text-center _4img">
         <div class="row">
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                <h3>Our Work</h3>
-                <hr>
+                <h2>Our Work</h2>
+                <hr class="under-line">
             </div>
         </div>
          <div class="row">
             <div class="col-md-10 col-md-push-1">
             <div class="row">
                 <div class="col-sm-12 col-md-6">
-                   <img src="images/portfolio-1.jpg" class="img-responsive" alt="">
+                   <img src="images/portfolio-1.jpg" class="img-responsive " alt="">
                 </div>
                 <div class="col-sm-12 col-md-6">
                    <img src="images/portfolio-2.jpg" class="img-responsive" alt="">
@@ -95,8 +102,8 @@
     <!-- end 4 img -->
     <div class="container-fluid nenxanh text-center">
         <h3>The buttons below are impossible to resist.</h3>        
-        <a href="#" class="btn btn-default">Click Me!</a>
-        <a href="#" class="btn btn-default">Look at Me!</a>
+        <a href="#" class="btn btn-default click-btn">Click Me!</a>
+        <a href="#" class="btn btn-default lookat-btn">Look at Me!</a>
     </div>
     <!-- end 2 button -->
     <div class="map">
@@ -112,18 +119,20 @@
                     <i class="fa fa-phone"> (123) 456-7890</i><br>
                     <i class="fa fa-envelope-o"><a href="xnxx.com"> name@example.com</a></i>
                     <ul class="list-inline">
-                        <li><i class="fa fa-facebook fa-3x"></i></li>
-                        <li><i class="fa fa-twitter fa-3x"></i></li>
-                        <li><i class="fa fa-dribbble fa-3x"></i></li>
+                        <li><a href="#"><i class="fa fa-facebook fa-3x icon-contact"></i></a></li>
+                        <li><a href="#"><i class="fa fa-twitter fa-3x icon-contact"></i></a></li>
+                        <li><a href="#"><i class="fa fa-dribbble fa-3x icon-contact"></i></a></li>
                     </ul>
-                    <hr>
+                    <hr class="under-line">
                     <small>Copyright © Your Website 2014</small>
 
                 </div>
             </div>
         </div>
     </footer>
- <script type="text/javascript" src="js/bootstrap.min.js"></script>
- <script type="text/javascript" src="js/jquery.js"></script>
+  
+
+
+    
 </body>
 </html>
