--- a/1.html
+++ b/1.html
@@ -8,7 +8,6 @@
 	<link rel="stylesheet" href="vendor/bootstrap.css">
  	<link rel="stylesheet" href="1.css">
  	<link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
- 	<link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200;400&display=swap" rel="stylesheet">
      <script type="text/javascript" src="js/bootstrap.min.js"></script>
     <script src="js/jquery.js"></script>
@@ -16,10 +15,25 @@
 
 </head>
 <body >
+    <div class="btn-menu">
+        <i class="fa fa-bars"></i>
+    </div>
+    <nav>
+        <h4><a class="title-menu" href="#">Start Bootstrap</a></h4>
+        <i class="fa fa-times btn-cancel"></i>
+        <ul class="menu">
+            <li><a href="#" class="clickHome">Home</a></li>
+            <li><a href="#" class="clickAbout">About</a></li>
+            <li><a href="#" class="clickServices">Services</a></li>
+            <li><a href="#" class="click3">Portfolio</a></li>
+            <li><a href="#" class="click4">Contact</a></li>
+        </ul>
+    </nav>
+    <!-- end nav -->
     <div class="container-fluid big-img text-center">
         <h1>Start Bootstrap</h1>
         <h3>Free Bootstrap Themes & Template</h3>
-        <a href="#" class="btn btn-default">Find Out More</a>
+        <a href="#" class="btn btn-default ">Find Out More</a>
     </div>
     <!-- end big-img-->
     <div class="container-fluid text-center text-under-bigimg">
